[package]
name = "stelae"
description = "A collection of tools in Rust and Python for preserving, authenticating, and accessing laws in perpetuity."
version = "0.5.0"
edition = "2021"
readme = "README.md"
license = "AGPL-3.0"
keywords = ["authentication", "laws", "preservation"]
categories = ["authentication", "web-programming::http-server"]
repository = "https://github.com/openlawlibrary/stelae"
rust-version = "1.83"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-service = "2.0"
actix-http = "3.2"
async-trait = "0.1.77"
md-5 = "0.10.6"
mime = "0.3.17"
mime_guess = "2.0.4"
anyhow = "1.0"
clap = { version = "4.0.27", features = ["derive"] }
git2 = "0.18"
lazy_static = "1.4.0"
regex = "1"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
derive_more = "0.99.17"
toml = "0.8.8"
toml_edit = "0.22"
serde_derive = "1.0.152"
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "chrono",
    "runtime-async-std",
    "any",
    "postgres",
    "sqlite",
] }
sophia = { version = "0.8.0", features = ["xml"] }

[dev-dependencies]
criterion = "0.3"
tempfile = "3"
just = "1.27"

[[bench]]
name = "git_benchmark"
harness = false
