[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde_json = { version = "1.0" }

[dependencies.sea-orm]
version = "0.11.0"
features = [
  "sqlx-postgres",
  "sqlx-sqlite", 
  "runtime-actix-native-tls", 
  "macros",
  "debug-print",
  "with-chrono"
]